Add the first section of the page.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,66 @@
   <header>
     <nav>
       <ul>
-          <li><img src="./images/header_logo.png"></li>
-          <li>Item</li>
-          <li>Item</li>
-          <li>Item</li>
-          <li>Item</li>
-          <li><button> <i class="fas fa-search"></i> Topics</button></li>
+        <li><img src="./images/header_logo.png"></li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li><button> <i class="fas fa-search"></i> Topics</button></li>
       </ul>
     </nav>
   </header>
   <main>
+    <section id="section-1">
+      <div class="lightGray section1-part ">
+          <div class="section1-part-content">
+            <p>
+                The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br/>
+                <span><i class="far fa-comment-alt"></i> Leave a comment</span>
+            </p>
+
+          </div>
+      </div>
+      <div class="lightGrayShade1 section1-part ">
+          <div class="section1-part-content">
+              <p>
+                  The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br/>
+                  <span><i class="far fa-comment-alt"></i>Leave a comment</span>
+              </p>
+  
+            </div>
+      </div>
+
+      <div class="lightGrayShade2 section1-part ">
+          <div class="section1-part-content">
+              <p>
+                  The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br/>
+                  <span><i class="far fa-comment-alt"></i>Leave a comment</span>
+              </p>
+  
+            </div>
+      </div>
+
+      <div class="lightGrayShade3 section1-part ">
+          <div class="section1-part-content">
+              <p>
+                  The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br/>
+                  <span><i class="far fa-comment-alt"></i>Leave a comment</span>
+              </p>
+  
+            </div>
+      </div>
+      <div id="section1-header">
+        <p>
+            Don’t Miss These Latest
+        </p><br/>
+        <p>
+            Articles
+        </p>
+
+      </div>
+
+    </section>
 
   </main>
   <footer>
