--- a/index.html
+++ b/index.html
@@ -24,55 +24,77 @@
   <main>
     <section id="section-1">
       <div class="lightGray section1-part ">
-          <div class="section1-part-content">
-            <p>
-                The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br/>
-                <span><i class="far fa-comment-alt"></i> Leave a comment</span>
-            </p>
+        <div class="section1-part-content">
+          <p>
+            The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br />
+            <span><i class="far fa-comment-alt"></i> Leave a comment</span>
+          </p>
 
-          </div>
+        </div>
       </div>
       <div class="lightGrayShade1 section1-part ">
-          <div class="section1-part-content">
-              <p>
-                  The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br/>
-                  <span><i class="far fa-comment-alt"></i>Leave a comment</span>
-              </p>
-  
-            </div>
+        <div class="section1-part-content">
+          <p>
+            The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br />
+            <span><i class="far fa-comment-alt"></i>Leave a comment</span>
+          </p>
+
+        </div>
       </div>
 
       <div class="lightGrayShade2 section1-part ">
-          <div class="section1-part-content">
-              <p>
-                  The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br/>
-                  <span><i class="far fa-comment-alt"></i>Leave a comment</span>
-              </p>
-  
-            </div>
+        <div class="section1-part-content">
+          <p>
+            The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br />
+            <span><i class="far fa-comment-alt"></i>Leave a comment</span>
+          </p>
+
+        </div>
       </div>
 
       <div class="lightGrayShade3 section1-part ">
-          <div class="section1-part-content">
-              <p>
-                  The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br/>
-                  <span><i class="far fa-comment-alt"></i>Leave a comment</span>
-              </p>
-  
-            </div>
+        <div class="section1-part-content">
+          <p>
+            The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br />
+            <span><i class="far fa-comment-alt"></i>Leave a comment</span>
+          </p>
+
+        </div>
       </div>
       <div id="section1-header">
         <p>
-            Don’t Miss These Latest
-        </p><br/>
+          Don’t Miss These Latest
+        </p><br />
         <p>
-            Articles
+          Articles
         </p>
 
       </div>
+    </section>
+    <section id="section-2">
+      <div>
+
+      </div>
+      <div>
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>
+          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et quo.
+        </p>
+      </div>
+      <div>
+          <h1>Lorem ipsum dolor sit amet</h1>
+          <p>
+            Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et quo.
+          </p>
+        </div>
+      <div>
+          <h1>Lorem ipsum dolor sit amet</h1>
+          <p>
+            Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et quo.
+          </p>
+        </div>
 
     </section>
-
   </main>
   <footer>
 
