--- a/index.html
+++ b/index.html
@@ -72,28 +72,80 @@
       </div>
     </section>
     <section id="section-2">
-      <div>
+      <div class="lightGrayShade3">
 
       </div>
-      <div>
+      <div class="lightGrayShade1 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
-          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et quo.
+          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+          vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+          mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+          quo.
         </p>
       </div>
-      <div>
-          <h1>Lorem ipsum dolor sit amet</h1>
-          <p>
-            Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et quo.
-          </p>
-        </div>
-      <div>
-          <h1>Lorem ipsum dolor sit amet</h1>
-          <p>
-            Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et quo.
-          </p>
-        </div>
+      <div class="lightGrayShade2 article-link">
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>
+          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+          vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+          mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+          quo.
+        </p>
+      </div>
+      <div class="lightGrayShade1 article-link">
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>
+          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+          vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+          mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+          quo.
+        </p>
+      </div>
 
+    </section>
+    <section id="section-3">
+      <div class="darkGray">
+          <div id="friend-website">
+            ShutterStock
+          </div>
+      </div>
+      <div class="article-link lightGray">
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>
+          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+          vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+          mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+          quo.
+        </p>
+    </div>
+      <div class="lightGrayShade2 article-link">
+          <h1>Lorem ipsum dolor sit amet</h1>
+          <p>
+            Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+            vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+            mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+            quo.
+          </p>
+        </div>
+      <div class="lightGrayShade3 article-link">
+          <h1>Lorem ipsum dolor sit amet</h1>
+          <p>
+            Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+            vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+            mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+            quo.
+          </p>
+        </div>
+      <div class="lightGrayShade2 article-link">
+          <h1>Lorem ipsum dolor sit amet</h1>
+          <p>
+            Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+            vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+            mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+            quo.
+          </p>
+        </div>
     </section>
   </main>
   <footer>
