Add section four div and person of week div.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head lang="en">
   <meta charset="utf-8">
   <title>Design Teardown</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Spinnaker&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/all.css">
 </head>
@@ -106,9 +108,9 @@
     </section>
     <section id="section-3">
       <div class="darkGray">
-          <div id="friend-website">
-            ShutterStock
-          </div>
+        <div id="friend-website">
+          ShutterStock
+        </div>
       </div>
       <div class="article-link lightGray">
         <h1>Lorem ipsum dolor sit amet</h1>
@@ -118,35 +120,122 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-    </div>
+      </div>
       <div class="lightGrayShade2 article-link">
-          <h1>Lorem ipsum dolor sit amet</h1>
-          <p>
-            Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
-            vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
-            mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
-            quo.
-          </p>
-        </div>
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>
+          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+          vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+          mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+          quo.
+        </p>
+      </div>
       <div class="lightGrayShade3 article-link">
-          <h1>Lorem ipsum dolor sit amet</h1>
-          <p>
-            Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
-            vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
-            mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
-            quo.
-          </p>
-        </div>
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>
+          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+          vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+          mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+          quo.
+        </p>
+      </div>
       <div class="lightGrayShade2 article-link">
-          <h1>Lorem ipsum dolor sit amet</h1>
-          <p>
-            Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
-            vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
-            mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
-            quo.
-          </p>
-        </div>
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>
+          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+          vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+          mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+          quo.
+        </p>
+      </div>
     </section>
+
+    <div class="articles-link-header">
+      <p>
+        See All Articles
+      </p>
+    </div>
+
+    <div id="coming-event">
+
+    </div>
+
+    <div id="person-of-week">
+
+    </div>
+
+    <section id="section-4">
+      <div class="section4-part darkGray">
+        <div>
+            <h1>
+                Bundlephobia
+            </h1>
+            <p>
+                july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+            </p>
+        </div>
+          
+      </div>
+
+      <div class="section4-part lightGray">
+          <div>
+              <h1>
+                  Bundlephobia
+              </h1>
+              <p>
+                  july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+              </p>
+          </div>
+      </div>  
+
+      <div class="section4-part lightGrayShade1">
+          <div>
+              <h1>
+                  Bundlephobia
+              </h1>
+              <p>
+                  july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+              </p>
+          </div>
+      </div>
+
+      <div class="section4-part lightGrayShade2">
+          <div>
+              <h1>
+                  Bundlephobia
+              </h1>
+              <p>
+                  july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+              </p>
+          </div>
+      </div>
+      <div class="section4-part lightGrayShade3">
+          <div>
+              <h1>
+                  Bundlephobia
+              </h1>
+              <p>
+                  july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+              </p>
+          </div>
+      </div>
+      <div class="section4-part darkGray">
+          <div>
+              <h1>
+                  Bundlephobia
+              </h1>
+              <p>
+                  july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+              </p>
+          </div>
+      </div>
+    </section>
+
+    <div class="articles-link-header">
+        <p>
+            MORE LINKS ON TWITTER <i class="fas fa-long-arrow-alt-right"></i>
+        </p>
+      </div>
   </main>
   <footer>
 
