Add textual content to section 5

--- a/index.html
+++ b/index.html
@@ -245,7 +245,15 @@
     </div>
 
     <section id="section-5">
-      <div class="lightGrayShade1"></div>
+      <div class="lightGrayShade1 article-link">
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>
+          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+          vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+          mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+          quo.
+        </p>
+      </div>
       <div class="lightGrayShade2 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
@@ -254,7 +262,6 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-
       </div>
       <div class="lightGrayShade3 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
@@ -283,7 +290,15 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade2"></div>
+      <div class="lightGrayShade2 article-link">
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>
+          Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
+          vel. Ut nullam lobortis efficiantur qui, unum aeterno disputando te pri. His aeque quando consul ei. Ne nam
+          mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
+          quo.
+        </p>
+      </div>
     </section>
   </main>
   <footer>
