Update the colors

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <title>Design Teardown</title>
 
   <link href="https://fonts.googleapis.com/css?family=Spinnaker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/all.css">
 </head>
 
 <body>
   <header>
-    <nav>
+    <nav class="darkGray2">
       <ul>
         <li><img src="./images/header_logo.png"></li>
         <li>Item</li>
@@ -26,7 +28,7 @@
   </header>
   <main>
     <section id="section-1">
-      <div class="lightGray section1-part ">
+      <div class="darkGray section1-part ">
         <div class="section1-part-content">
           <p>
             The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br />
@@ -35,31 +37,31 @@
 
         </div>
       </div>
-      <div class="lightGrayShade1 section1-part ">
+      <div class="darkGray1 section1-part ">
         <div class="section1-part-content">
           <p>
             The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br />
-            <span><i class="far fa-comment-alt"></i>Leave a comment</span>
+            <span><i class="far fa-comment-alt"></i> Leave a comment</span>
           </p>
 
         </div>
       </div>
 
-      <div class="lightGrayShade2 section1-part ">
+      <div class="darkGray1 section1-part ">
         <div class="section1-part-content">
           <p>
             The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br />
-            <span><i class="far fa-comment-alt"></i>Leave a comment</span>
+            <span><i class="far fa-comment-alt"></i> Leave a comment</span>
           </p>
 
         </div>
       </div>
 
-      <div class="lightGrayShade3 section1-part ">
+      <div class="darkGray section1-part ">
         <div class="section1-part-content">
           <p>
             The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br />
-            <span><i class="far fa-comment-alt"></i>Leave a comment</span>
+            <span><i class="far fa-comment-alt"></i> Leave a comment</span>
           </p>
 
         </div>
@@ -75,10 +77,7 @@
       </div>
     </section>
     <section id="section-2">
-      <div class="lightGrayShade3">
-
-      </div>
-      <div class="lightGrayShade1 article-link">
+      <div class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -87,7 +86,7 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade2 article-link">
+      <div class="lightGray1 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -96,7 +95,7 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade1 article-link">
+      <div class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -108,12 +107,12 @@
 
     </section>
     <section id="section-3">
-      <div class="darkGray">
-        <div id="friend-website">
+      <div >
+        <div id="friend-website" class="darkGray">
           ShutterStock
         </div>
       </div>
-      <div class="article-link lightGray">
+      <div class="article-link darkGray">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -122,7 +121,7 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade2 article-link">
+      <div class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -131,7 +130,7 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade3 article-link">
+      <div class="lightGray1 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -140,7 +139,7 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade2 article-link">
+      <div class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -157,16 +156,16 @@
       </p>
     </div>
 
-    <div id="coming-event">
+    <div id="coming-event" class="darkGray">
 
     </div>
 
-    <div id="person-of-week">
+    <div id="person-of-week" class="lightGray2">
 
     </div>
 
     <section id="section-4">
-      <div class="section4-part darkGray">
+      <div class="section4-part lightGray">
         <div>
           <h1>
             Bundlephobia
@@ -177,6 +176,30 @@
           </p>
         </div>
 
+      </div>
+
+      <div class="section4-part lightGray1">
+        <div>
+          <h1>
+            Bundlephobia
+          </h1>
+          <p>
+            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
+            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+          </p>
+        </div>
+      </div>
+
+      <div class="section4-part lightGray1">
+        <div>
+          <h1>
+            Bundlephobia
+          </h1>
+          <p>
+            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
+            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+          </p>
+        </div>
       </div>
 
       <div class="section4-part lightGray">
@@ -190,8 +213,7 @@
           </p>
         </div>
       </div>
-
-      <div class="section4-part lightGrayShade1">
+      <div class="section4-part lightGray">
         <div>
           <h1>
             Bundlephobia
@@ -202,30 +224,7 @@
           </p>
         </div>
       </div>
-
-      <div class="section4-part lightGrayShade2">
-        <div>
-          <h1>
-            Bundlephobia
-          </h1>
-          <p>
-            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
-            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
-          </p>
-        </div>
-      </div>
-      <div class="section4-part lightGrayShade3">
-        <div>
-          <h1>
-            Bundlephobia
-          </h1>
-          <p>
-            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
-            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
-          </p>
-        </div>
-      </div>
-      <div class="section4-part darkGray">
+      <div class="section4-part lightGray1">
         <div>
           <h1>
             Bundlephobia
@@ -245,7 +244,7 @@
     </div>
 
     <section id="section-5">
-      <div class="lightGrayShade1 article-link">
+      <div class="darkGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -254,7 +253,7 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade2 article-link">
+      <div class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -263,7 +262,7 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade3 article-link">
+      <div class="lightGray1 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -272,7 +271,7 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade1 article-link">
+      <div class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -281,7 +280,7 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade1 article-link">
+      <div class="lightGray1 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -290,7 +289,7 @@
           quo.
         </p>
       </div>
-      <div class="lightGrayShade2 article-link">
+      <div class="darkGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -301,9 +300,6 @@
       </div>
     </section>
 
-    <div id="news-letter">
-
-    </div>
 
     <div class="articles-link-header">
       <p>
@@ -314,7 +310,7 @@
 
 
   
-  <footer id="footer">
+  <footer id="footer" class="darkGray"> 
     <p>
       Browse All Smashing Magazine Topics
     </p>
