--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head lang="en">
+<head>
   <meta charset="utf-8">
   <title>Design Teardown</title>
 
@@ -16,7 +16,7 @@
   <header>
     <nav class="darkGray2">
       <ul>
-        <li><img src="./images/header_logo.png"></li>
+        <li><img src="./images/header_logo.png" alt="logo"></li>
         <li>Item</li>
         <li>Item</li>
         <li>Item</li>
@@ -27,9 +27,11 @@
     </nav>
   </header>
   <main>
-    <section id="section-1">
+    <div id="section-1">
+      
       <div class="darkGray section1-part ">
         <div class="section1-part-content">
+          
           <p>
             The Ultimate Guide To Building Scalable Web Scrapers With Scrapy<br />
             <span><i class="far fa-comment-alt"></i> Leave a comment</span>
@@ -75,7 +77,7 @@
         </p>
 
       </div>
-    </section>
+    </div>
     <section id="section-2">
       <div class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
@@ -319,7 +321,7 @@
 
 
       <ul>
-        <li><a href="/category/accessibility"></a>Accessibility</a></li>
+        <li><a href="/category/accessibility">Accessibility</a></li>
         <li ><a href="/category/android">Android</a></li>
         <li><a href="/category/animation">Animation</a></li>
         <li><a href="/category/apps">Apps</a></li>
