Review Issues : Make navigation use flex box display.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li>Item</li>
         <li>Item</li>
         <li>Item</li>
-        <li><button> <i class="fas fa-search"></i> Topics</button></li>
+        <li><button class="lightGray2"> <i class="fas fa-search"></i> Topics</button></li>
       </ul>
     </nav>
   </header>
