--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </nav>
   </header>
   <main>
-    <div id="section-1">
+    <section id="section-1">
 
-      <div class="darkGray section1-part ">
+      <article class="darkGray section1-part ">
         <div class="section1-part-content">
           <img class="profile" src="images/image_1.jpg" alt="profile">
           <p>
@@ -38,8 +38,8 @@
           </p>
 
         </div>
-      </div>
-      <div class="darkGray1 section1-part ">
+      </article>
+      <article class="darkGray1 section1-part ">
         <div class="section1-part-content">
           <img class="profile" src="images/image_1.jpg" alt="profile">
           <p>
@@ -48,9 +48,9 @@
           </p>
 
         </div>
-      </div>
+      </article>
 
-      <div class="darkGray1 section1-part ">
+      <article class="darkGray1 section1-part ">
         <div class="section1-part-content">
           <img class="profile" src="images/image_1.jpg" alt="profile">
           <p>
@@ -58,9 +58,9 @@
             <span><i class="far fa-comment-alt"></i> Leave a comment</span>
           </p>
         </div>
-      </div>
+      </article>
 
-      <div class="darkGray section1-part ">
+      <article class="darkGray section1-part ">
         <div class="section1-part-content">
           <img class="profile" src="images/image_1.jpg" alt="profile">
           <p>
@@ -69,7 +69,7 @@
           </p>
 
         </div>
-      </div>
+      </article>
       <div id="section1-header">
         <p>
           Don’t Miss These Latest
@@ -79,9 +79,9 @@
         </p>
 
       </div>
-    </div>
+    </section>
     <section id="section-2">
-      <div class="lightGray article-link">
+      <article class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -89,8 +89,8 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-      <div class="lightGray1 article-link">
+      </article>
+      <article class="lightGray1 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -98,8 +98,8 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-      <div class="lightGray article-link">
+      </article>
+      <article class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -107,16 +107,15 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-
+      </article>
     </section>
     <section id="section-3">
-      <div>
+      <article>
         <div id="friend-website" class="darkGray">
           ShutterStock
         </div>
-      </div>
-      <div class="article-link darkGray">
+      </article>
+      <article class="article-link darkGray">
         <img class="cat" src="images/image_2.svg" alt="Cat logo">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
@@ -125,8 +124,8 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-      <div class="lightGray article-link">
+      </article>
+      <article class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -134,8 +133,8 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-      <div class="lightGray1 article-link">
+      </article>
+      <article class="lightGray1 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -143,8 +142,8 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-      <div class="lightGray article-link">
+      </article>
+      <article class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -152,17 +151,17 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
+      </article>
     </section>
 
-    <div class="articles-link-header">
+    <section class="articles-link-header">
       <p>
         See All Articles
       </p>
-    </div>
+    </section>
 
-    <div id="coming-event" class="darkGray">
-      <div class="article-link">
+    <section id="coming-event" class="darkGray">
+      <article class="article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -170,12 +169,12 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
+      </article>
       <img class="cat" src="images/image_2.svg" alt="Cat logo">
-    </div>
+    </section>
 
-    <div id="person-of-week" class="lightGray2">
-      <div class="article-link">
+    <section id="person-of-week" class="lightGray2">
+      <article class="article-link">
         <img class="profile" src="images/image_1.jpg" alt="profile">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
@@ -184,97 +183,97 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
+      </article>
 
-    </div>
-
-    <section id="section-4">
-      <div class="section4-part lightGray">
-        <div>
-          <img class="profile" src="images/image_1.jpg" alt="profile">
-          <h1>
-            Bundlephobia
-          </h1>
-          <p>
-            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
-            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
-          </p>
-        </div>
-
-      </div>
-
-      <div class="section4-part lightGray1">
-        <div>
-          <img class="profile" src="images/image_1.jpg" alt="profile">
-          <h1>
-            Bundlephobia
-          </h1>
-          <p>
-            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
-            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
-          </p>
-        </div>
-      </div>
-
-      <div class="section4-part lightGray1">
-        <div>
-          <img class="profile" src="images/image_1.jpg" alt="profile">
-          <h1>
-            Bundlephobia
-          </h1>
-          <p>
-            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
-            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
-          </p>
-        </div>
-      </div>
-
-      <div class="section4-part lightGray">
-        <div>
-          <img class="profile" src="images/image_1.jpg" alt="profile">
-          <h1>
-            Bundlephobia
-          </h1>
-          <p>
-            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
-            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
-          </p>
-        </div>
-      </div>
-      <div class="section4-part lightGray">
-        <div>
-          <img class="profile" src="images/image_1.jpg" alt="profile">
-          <h1>
-            Bundlephobia
-          </h1>
-          <p>
-            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
-            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
-          </p>
-        </div>
-      </div>
-      <div class="section4-part lightGray1">
-        <div>
-          <img class="profile" src="images/image_1.jpg" alt="profile">
-          <h1>
-            Bundlephobia
-          </h1>
-          <p>
-            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
-            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
-          </p>
-        </div>
-      </div>
     </section>
 
-    <div class="articles-link-header">
+    <section id="section-4">
+      <article class="section4-part lightGray">
+        <div>
+          <img class="profile" src="images/image_1.jpg" alt="profile">
+          <h1>
+            Bundlephobia
+          </h1>
+          <p>
+            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
+            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+          </p>
+        </div>
+
+      </article>
+
+      <article class="section4-part lightGray1">
+        <div>
+          <img class="profile" src="images/image_1.jpg" alt="profile">
+          <h1>
+            Bundlephobia
+          </h1>
+          <p>
+            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
+            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+          </p>
+        </div>
+      </article>
+
+      <article class="section4-part lightGray1">
+        <div>
+          <img class="profile" src="images/image_1.jpg" alt="profile">
+          <h1>
+            Bundlephobia
+          </h1>
+          <p>
+            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
+            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+          </p>
+        </div>
+      </article>
+
+      <article class="section4-part lightGray">
+        <div>
+          <img class="profile" src="images/image_1.jpg" alt="profile">
+          <h1>
+            Bundlephobia
+          </h1>
+          <p>
+            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
+            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+          </p>
+        </div>
+      </article>
+      <article class="section4-part lightGray">
+        <div>
+          <img class="profile" src="images/image_1.jpg" alt="profile">
+          <h1>
+            Bundlephobia
+          </h1>
+          <p>
+            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
+            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+          </p>
+        </div>
+      </article>
+      <article class="section4-part lightGray1">
+        <div>
+          <img class="profile" src="images/image_1.jpg" alt="profile">
+          <h1>
+            Bundlephobia
+          </h1>
+          <p>
+            july 1, 2019 — JavaScript bloat is more real today than it ever was. Bundlephobia lets you understand the
+            performance cost of npm install-ing a new npm package before actually adding it to your bundle.
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <section class="articles-link-header">
       <p>
         MORE LINKS ON TWITTER <i class="fas fa-long-arrow-alt-right"></i>
       </p>
-    </div>
+    </section>
 
     <section id="section-5">
-      <div class="darkGray article-link">
+      <article class="darkGray article-link">
         <img class="cat" src="images/image_3.png" alt="Cat logo">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
@@ -283,8 +282,8 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-      <div class="lightGray article-link">
+      </article>
+      <article class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -292,8 +291,8 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-      <div class="lightGray1 article-link">
+      </article>
+      <article class="lightGray1 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -301,8 +300,8 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-      <div class="lightGray article-link">
+      </article>
+      <article class="lightGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -310,8 +309,8 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-      <div class="lightGray1 article-link">
+      </article>
+      <article class="lightGray1 article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -319,8 +318,8 @@
           mundi denique omittam, soluta aliquando inciderint et nam. Atqui viderer tacimates ad sed. Ferri omnesque et
           quo.
         </p>
-      </div>
-      <div class="darkGray article-link">
+      </article>
+      <article class="darkGray article-link">
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
           Lorem ipsum dolor sit amet, ut mel scripta splendide, mazim pericula assentior ei vel, tamquam reprimique cu
@@ -330,15 +329,17 @@
         </p>
         <img class="cat" src="images/image_2.svg" alt="Cat logo">
 
-      </div>
+      </article>
     </section>
 
 
-    <div class="articles-link-header">
-      <p>
-        See All Articles <i class="fas fa-long-arrow-alt-right"></i>
-      </p>
-    </div>
+    <section class="articles-link-header">
+      <article>
+        <p>
+          See All Articles <i class="fas fa-long-arrow-alt-right"></i>
+        </p>
+      </article>
+    </section>
   </main>
 
 
